2009-09-07  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Changed Report class to accept various output printers and
	be an instance class. An expression resolver can now use different
	message reporter for each call and Report.Error can safely throw
	an exception. Part of ongoing work to turn mcs into proper library.

2009-09-04  Marek Safar  <marek.safar@gmail.com>

	* statement.cs, ecore.cs: Removed error reporting from emit code.

2009-09-04  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay, parameter.cs: Moved parser check out of constructor

2009-09-03  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs, expression.cs, statement.cs, cs-parser.jay: Moved
	parser checks out of constructors.

2009-09-02  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, statement.cs, ecore.cs: Use common Report.Error.

2009-09-02  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #535448
	* anonymous.cs, class.cs: Copy return label between all contexts.

2009-09-02  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #535395
	* namespace.cs: Resolve context can be null.

2009-08-25  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #533912
	* generic.cs: Use correct context for constraints resolving.

2009-08-25  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #532630
	* driver.cs: Trim conditional symbols.

2009-08-25  Marek Safar  <marek.safar@gmail.com>

	* context.cs: New file.
	
	* *.exe.sources, *.csproj: Updated.

2009-08-25  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, parameter.cs, decl.cs, statement.cs, namespace.cs,
	class.cs, generic-mcs.cs, codegen.cs: Add GetSignatureForError to
	IMembercontext, some small cleanups.

2009-08-24  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Split ResolveContext and EmitContext.

2009-08-24  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Only ResolveContext implements IMemberContext.

2009-08-21  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Renamed IResolveContext to IMemberContext.
